Complete method JavaDoc with trailing periods and route null/empty checks through Objects and Apache ObjectUtils.
Co-authored-by: Cursor <cursoragent@cursor.com>